Fixed expand/collapse CSS animation

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -228,7 +228,7 @@ main {
 		@include span-columns(4);
 		max-height: 575px;
 		position: relative;
-
+		@include transition(max-height 500ms ease-in-out);
 		@include media(max-width 992px) {
 			@include span-columns(12);
 		}
@@ -249,8 +249,8 @@ main {
 		&.your-account,
 		&.sharing,
 		&.node-info {
+			overflow: hidden;
 			@include span-columns(4 of 4);
-
 			@include media(max-width 992px) {
 				@include span-columns(12 of 12);
 			}
@@ -278,15 +278,13 @@ main {
 		}
 
 		&.closed {
-			@include transition(max-height 500ms ease-in-out);
 			overflow: hidden;
 			max-height: 70px;
 			h1 aside:before {
 				content: '\f078';
 			}
+			@include transition(max-height 500ms ease-in-out);
 		}
-
-		@include transition(max-height 500ms ease-in-out);
 	}
 
 	h1 {
